Fixed spacing issue of new record link in all listing pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6525,7 +6525,7 @@ li.collection-item a{
 }
 .secondary_new_link{
   position: relative;
-  bottom: 22px;
+  bottom: 0px;
 }
 .currency-select span.caret{
   left: 30px;
